# estudo-email-marketing-python

./: dados.xlsx  dadosGrafico.xlsx  destinatarios.py  grafico.py  grafico3.py  rodarMacro.xlsm  rodarMacroComWin32.py  ~$dados.xlsx
Jinja2-3.1.2.tar/Jinja2-3.1.2/: setup.cfg
output/: index.html
templates/: index.html  index2.html
