[metadata]
name = Jinja2
version = attr: jinja2.__version__
url = https://palletsprojects.com/p/jinja/
project_urls = 
	Donate = https://palletsprojects.com/donate
	Documentation = https://jinja.palletsprojects.com/
	Changes = https://jinja.palletsprojects.com/changes/
	Source Code = https://github.com/pallets/jinja/
	Issue Tracker = https://github.com/pallets/jinja/issues/
	Twitter = https://twitter.com/PalletsTeam
	Chat = https://discord.gg/pallets
license = BSD-3-Clause
license_files = LICENSE.rst
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = A very fast and expressive template engine.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
	Topic :: Text Processing :: Markup :: HTML

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
babel.extractors = 
	jinja2 = jinja2.ext:babel_extract[i18n]

[tool:pytest]
testpaths = tests
filterwarnings = 
	error
	ignore:The loop argument:DeprecationWarning:asyncio[.]base_events:542

[coverage:run]
branch = True
source = 
	jinja2
	tests

[coverage:paths]
source = 
	src
	*/site-packages

[flake8]
select = B, E, F, W, B9, ISC
ignore = 
	E203
	E501
	E722
	W503
max-line-length = 80
per-file-ignores = 
	src/jinja2/__init__.py: F401

[mypy]
files = src/jinja2
python_version = 3.7
show_error_codes = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True

[mypy-jinja2.defaults]
no_implicit_reexport = False

[mypy-markupsafe]
no_implicit_reexport = False

[egg_info]
tag_build = 
tag_date = 0

